--- a/styles/@imports/header.css
+++ b/styles/@imports/header.css
@@ -4,9 +4,6 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 0 1.2rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -14,26 +11,55 @@ header {
   position: relative;
 }
 
+@media screen and (min-width: 758px) {
+  header {
+    padding: 0 0.8rem;
+  }
+}
+
+header a {
+  text-decoration: none;
+  color: #fff;
+}
+
 header h1 {
   color: #fff;
   font-size: 1rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-header .menu {
-  -webkit-transform-origin: top;
-          transform-origin: top;
-  -webkit-transform: scale(1, 0);
-          transform: scale(1, 0);
-  position: absolute;
-  width: 100%;
-  top: 100%;
-  left: 0;
-  background: midnightblue;
-  z-index: 100;
-  -webkit-transition: -webkit-transform .3s ease-in;
-  transition: -webkit-transform .3s ease-in;
-  transition: transform .3s ease-in;
-  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
+@media screen and (max-width: 758px) {
+  header .menu {
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    -webkit-transform: scale(1, 0);
+            transform: scale(1, 0);
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    background: midnightblue;
+    z-index: 100;
+    -webkit-transition: -webkit-transform .3s ease-in;
+    transition: -webkit-transform .3s ease-in;
+    transition: transform .3s ease-in;
+    transition: transform .3s ease-in, -webkit-transform .3s ease-in;
+  }
+}
+
+@media screen and (min-width: 758px) {
+  header .menu {
+    top: 0;
+  }
 }
 
 header .menu ul {
@@ -44,17 +70,76 @@ header .menu ul {
   padding: .8em 0;
 }
 
+@media screen and (min-width: 758px) {
+  header .menu ul {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #fff;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+  }
+}
+
 header .menu ul li {
   text-transform: uppercase;
   margin: .8em 0;
   padding: .5em 0;
   opacity: 0;
   color: #eee;
+  position: relative;
+}
+
+@media screen and (min-width: 758px) {
+  header .menu ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100%;
+    opacity: 1;
+    margin: 0 .4rem;
+    padding: 0;
+    font-size: .6rem;
+  }
+  header .menu ul li:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    width: 100%;
+    height: 3px;
+    border-radius: 0 0 2px 2px;
+    background-color: #fff;
+    -webkit-transform: scale(0, 1);
+            transform: scale(0, 1);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+  }
 }
 
 header .menu ul li:hover {
   cursor: pointer;
-  background-color: navy;
+}
+
+@media screen and (max-width: 758px) {
+  header .menu ul li:hover {
+    background-color: navy;
+  }
+}
+
+@media screen and (min-width: 758px) {
+  header .menu ul li:hover:before {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    -webkit-transition: -webkit-transform ease-in .3s;
+    transition: -webkit-transform ease-in .3s;
+    transition: transform ease-in .3s;
+    transition: transform ease-in .3s, -webkit-transform ease-in .3s;
+  }
 }
 
 header #menu-trigger {
@@ -76,34 +161,6 @@ header #menu-trigger:checked ~ .menu li {
   transition: opacity .2s ease-in .5s;
 }
 
-header #menu-trigger:checked ~ .menu .menu-trigger-label span {
-  background: transparent;
-  -webkit-transition: background .3s ease-in;
-  transition: background .3s ease-in;
-}
-
-header #menu-trigger:checked ~ .menu .menu-trigger-label span:before {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-header #menu-trigger:checked ~ .menu .menu-trigger-label span:after {
-  width: 28px;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-
-header #menu-trigger:checked ~ .menu .menu-trigger-label span:before, header #menu-trigger:checked ~ .menu .menu-trigger-label span:after {
-  -webkit-transition: -webkit-transform .3s ease-in;
-  transition: -webkit-transform .3s ease-in;
-  transition: transform .3s ease-in;
-  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
-}
-
-header #menu-trigger:checked ~ .menu .menu-trigger-label:not(.class) span:before, header #menu-trigger:checked ~ .menu .menu-trigger-label:not(.class) span:after {
-  top: 0;
-}
-
 label {
   height: 100%;
   display: -webkit-box;
@@ -115,6 +172,12 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (min-width: 758px) {
+  label {
+    display: none;
+  }
 }
 
 label span {
