--- a/styles/@imports/header.scss
+++ b/styles/@imports/header.scss
@@ -2,43 +2,109 @@ $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
 
+$tablet: 758px;
+$desktop: 1020px;
+@mixin tablet {
+    @media screen and (min-width: #{$tablet}){
+        @content
+    }
+}
+
+@mixin mobile {
+    @media screen and (max-width: #{$tablet}){
+        @content
+    }
+}
+
 header{
     background-color: $theme;
     height: 70px;
     display: flex;
-    align-items: center;
     padding: 0 1.2rem;
     justify-content: space-between;
     position: relative;
+    @include tablet{
+        padding: 0 0.8rem;
+    }
+    a{
+        text-decoration: none;
+        color: #fff;
+    }
     h1{
         color: #fff;
         font-size: 1rem;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .menu{
-        transform-origin: top;
-        transform: scale(1,0);
-        position: absolute;
-        width: 100%;
-        top: 100%;
-        left: 0;
-        background: $theme;
-        z-index: 100;
-        transition: transform .3s ease-in;
+        @include mobile{
+            transform-origin: top;
+            transform: scale(1,0);
+            position: absolute;
+            width: 100%;
+            top: 100%;
+            left: 0;
+            background: $theme;
+            z-index: 100;
+            transition: transform .3s ease-in;
+        }
+        @include tablet{
+            top: 0;
+        }
         ul{
             background: transparent;
             margin: 1.2em auto;
             border-radius: 6px;
             text-align: center;
             padding: .8em 0;
+            @include tablet{
+                height: 100%;
+                display: flex;
+                color: #fff;
+                border-radius: 0;
+                margin: 0;
+                padding: 0;
+            }
             li{
                 text-transform: uppercase;
                 margin: .8em 0;
                 padding: .5em 0;
                 opacity: 0;
                 color: $color;
+                position: relative;
+                @include tablet{
+                    display: flex;
+                    align-items: center;
+                    height: 100%;
+                    opacity: 1;
+                    margin: 0 .4rem;
+                    padding: 0;
+                    font-size: .6rem;
+                    &:before{
+                        position: absolute;
+                        content: '';
+                        top: 0;
+                        width: 100%;
+                        height: 3px;
+                        border-radius: 0 0 2px 2px;
+                        background-color: #fff;
+                        transform: scale(0,1);
+                        transform-origin: left;
+                    }
+                }
                 &:hover{
                     cursor: pointer;
-                    background-color: $bgcolor;
+                    @include mobile{                        
+                        background-color: $bgcolor;
+                    }
+                    @include tablet{
+                        &:before{
+                            transform: scale(1,1);
+                            transition: transform ease-in .3s;
+                        }
+                    }
                 }
             }
         }
@@ -52,31 +118,31 @@ header{
                 opacity: 1;
                 transition: opacity .2s ease-in .5s;
             }
-            .menu-trigger-label{
-                span{
-                    background: transparent;
-                    transition: background .3s ease-in;
-                    &:before{
-                        transform: rotate(45deg);
-                    }
-                    &:after{
-                        width: 28px;
-                        transform: rotate(-45deg);
-                    }
-                    &:before,
-                    &:after{
-                        transition: transform .3s ease-in;
-                    }
-                }
-                &:not(.class){
-                    span{
-                        &:before,&:after{
-                            top: 0;
-                        }
-                    }
-                }
-                }
-            } 
+            // .menu-trigger-label{
+            //     span{
+            //         background: transparent;
+            //         transition: background .3s ease-in;
+            //         &:before{
+            //             transform: rotate(45deg);
+            //         }
+            //         &:after{
+            //             width: 28px;
+            //             transform: rotate(-45deg);
+            //         }
+            //         &:before,
+            //         &:after{
+            //             transition: transform .3s ease-in;
+            //         }
+            //     }
+            //     &:not(.class){
+            //         span{
+            //             &:before,&:after{
+            //                 top: 0;
+            //             }
+            //         }
+            //     }
+            // }
+        } 
         }
     }
     label{
@@ -84,6 +150,9 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
+        @include tablet{
+            display: none;
+        }
         span{
             height: 3px;
             width: 24px;
